# OCR-LLM

./: .env.template  .gitignore  PDF_to_OCR_app.py  README.md  pyproject.toml
config/: embeddings.py  fees_table.py  llm.py  prompt.py
data/extracted_texts/: __init__.py
data/fees_summaries/: __init__.py
data/human_validated_fees/: __init__.py
data/improved_texts/: __init__.py
data/pdfs/raw/: __init__.py
data/pdfs/splitted/: __init__.py
data/summarized_pages/: __init__.py
db/: __init__.py
pages/: 2_Enchance_OCR.py  3_Fees_Summarizer.py  4_Fees_Table.py  5_Chat_with_your_PDF.py  6_Demo.py
src/lib/: ocr.py  utils.py
src/scripts/: detect_fees.py  improve_ocr.py  ocr.py  rag.py
